manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "timorcms"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "timorcms"
    spec:
      containers:
        - name: "timorcms"
          image: "timorcms.azurecr.io/timorcms"
          ports:
          - containerPort: 80
