manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "timorcms"
    labels:
        app: "timorcms"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: timorcmse921-timorcms.c0afd9bcd5a34e1ebe90.japaneast.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "timorcms"
                servicePort: 80
